제수호 입덕사이트를 만들기로 결정
간단하게 만들어봄

--- a/1.html
+++ b/1.html
@@ -3,6 +3,14 @@
 <head>
   <title>WEB1 -html</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+    }
+    h1{
+      font-sixe:100px;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
