--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 -Welcome</title>
+  <title>수호천사</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+      text-decoration:none;
+    }
+    html{
+      font-family: sans-serif;
+    }
+    h1{
+      font-size:45px;
+      text-align:center;
+    }
+    p{
+      font-size:14px;
+    }
+    ul{
+      list-style-type: none;
+    }
+    ul.삼행시 li:before{
+      content:">";
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>WEB</h2>
+  <h1><a href="index.html" style="color:gray">제수호</a></h1>
+  <h2>&nbsp;<strong>제수호</strong>가 누구냐구요?</h2>
+  <img src="1.jpg" width="100%" title="도랐다 존잘">
   <p>
-    웹의 원래 의미는 「거미집」으로 하나의 사이트나 또는 다른 사이트와의 관계가 거미집처럼 복잡하게 얽혀 있기 때문에 웹이라고 부른다.
+    &nbsp;&nbsp;그의 이름은 제수호. 31세 호랑이띠. IT계 최고의 게임회사 ‘제제 팩토리’의 CEO 겸 PD (Project Director).<br/>
+    &nbsp;체크셔츠와 후드티만으로도 패션은 그냥 껌이고, 검정 뿔테 안경을 쓰면 진짜 거짓말 안하고 baby보다 100배는 더 귀엽고, 뜯어보면 미남이고, 자세히 보면 초초초미남.<br/>
+    &nbsp;눈이 저렇게 찢어졌는데 어떻게 안 반해? 저렇게 잘생기고 귀엽고 섹시하고 다정하고 돈많고 멋진거 혼자 다하는데 어떻게 안 반해?
   </p>
+  <br/>
+  <ul class="삼행시">
+    <li><a href="1.html"><strong>제</strong>밌자나여</a></li>
+    <li><a href="2.html"><strong>수</strong>트빨 멋지고요</a></li>
+    <li><a href="3.html"><strong>호</strong>랑이맨~어흥~</a></li>
+  </ul>
   </body>
 </html>
